# arcade

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  index.html  make.py  pyproject.toml
.github/workflows/: bump_version.yml  code_quality.yml  create_commit_note_log.yml  docs.yml  push_build_to_prod_pypi.yml  push_build_to_test_pypi.yml  release.yml  selfhosted_runner.yml  status_embed.yaml  test.yml  verify_types.yml
arcade/: VERSION  __init__.py  __main__.py  application.py  clock.py  context.py  easing.py  hexagon.py  isometric.py  paths.py  physics_engines.py  pymunk_physics_engine.py  scene.py  sections.py  shape_list.py  sound.py  text.py  utils.py  window_commands.py
arcade/anim/: easing.py
arcade/camera/: camera_2d.py  data_types.py  default.py  projection_functions.py
arcade/cli/: __init__.py  cli.py
arcade/cli/commands/: __init__.py  base.py  info.py
arcade/draw/: rect.py
arcade/examples/: dual_stick_shooter.py  hex_map.py  perspective.py  procedural_caves_bsp.py  procedural_caves_cellular.py  sprite_move_input_manager.py
arcade/examples/gl/: numpy_sprite.py
arcade/examples/gui/: 2_widgets.py  exp_controller_inventory.py  exp_controller_support.py  exp_controller_support_grid.py  exp_inventory_demo.py  exp_restricted_input.py
arcade/experimental/: controller_window.py
arcade/future/background/: background_texture.py
arcade/future/input/: input_manager_example.py
arcade/future/light/: lights.py
arcade/future/video/: video_player.py
arcade/gl/: context.py  framebuffer.py  program.py  types.py  uniform.py
arcade/gui/: events.py  nine_patch.py  property.py  surface.py  ui_manager.py  view.py
arcade/gui/experimental/: controller.py  focus.py  password_input.py  restricted_input.py  scroll_area.py
arcade/gui/widgets/: __init__.py  buttons.py  dropdown.py  layout.py  slider.py  text.py
arcade/hitbox/: __init__.py
arcade/input/: __init__.py  inputs.py  manager.py
arcade/particles/: emitter.py
arcade/resources/: __init__.py
arcade/sprite/: animated.py  base.py  sprite.py
arcade/sprite_list/: collision.py  sprite_list.py
arcade/texture/: generate.py  loading.py  manager.py
arcade/texture_atlas/: atlas_default.py
arcade/tilemap/: tilemap.py
arcade/types/: box.py
benchmarks/sprite/: main.py  sprite_alt.py
doc/: conf.py  index.rst
doc/_archive/: get_started.rst
doc/_archive/install/: windows.rst
doc/_includes/: resources_Top-Level_Resources.rst  resources_Video.rst
doc/_static/css/: custom.css  layout.css
doc/_static/js/: custom.js
doc/about/: for_academia.rst  permissive_licensing.rst
doc/api_docs/: arcade.rst
doc/api_docs/gl/: index.rst  types.rst
doc/community/games/: sample_games.rst
doc/example_code/: index.rst  sprite_move_animation.rst
doc/extensions/: prettyspecialmethods.py
doc/get_started/: install.rst
doc/programming_guide/: camera.rst  event_loop.rst
doc/programming_guide/gui/: concepts.rst
doc/programming_guide/input/: advanced_input.rst  index.rst  simple_input.rst
doc/tutorials/: index.rst
doc/tutorials/card_game/: index.rst
doc/tutorials/compiling_with_nuitka/: index.rst
doc/tutorials/hex_map/: index.rst
doc/tutorials/menu/: index.rst  menu_05.py
doc/tutorials/platform_tutorial/: step_02.rst  step_07.rst
doc/tutorials/pymunk_platformer/: index.rst
doc/tutorials/views/: 01_views.py  02_views.py  03_views.py  04_views.py  index.rst
tests/: __init__.py  conftest.py
tests/doc/: check_examples_2.py  check_samples.py
tests/integration/examples/: test_examples.py  test_line_lengths.py
tests/integration/tutorials/: test_tutorials.py
tests/manual_smoke/: sprite_collision_inspector.py
tests/unit/: test_arcade.py  test_clock.py  test_example_docstrings.py  test_hexagon.py  test_shadertoy.py  test_sound.py  test_utils.py  test_version.py
tests/unit/atlas/: test_basics.py  test_rebuild_resize.py  test_region.py
tests/unit/camera/: test_camera2d.py  test_camera_controller_methods.py  test_camera_shake.py  test_viewport_projector.py
tests/unit/color/: test_module_color.py  test_module_csscolor.py
tests/unit/geometry/: test_is_point_in_box.py
tests/unit/gl/: test_gl_context.py  test_gl_framebuffer.py  test_gl_query.py  test_gl_texture.py  test_gl_texture_array.py  test_gl_types.py
tests/unit/gui/: test_exp_restricted_input.py  test_focus.py  test_layout_size_hint_warning.py  test_layouting_anchorlayout.py  test_layouting_box_main_algorithm.py  test_layouting_boxlayout.py  test_ninepatch_draw.py  test_property.py  test_uidropdown.py  test_uiinputtext.py  test_uilabel.py  test_uimanager_layouting.py  test_widget_tree.py
tests/unit/physics_engine/: test_physics_engine_platformer.py  test_pymunk.py
tests/unit/rect/: test_rect_creation_helpers.py  test_rect_instances.py
tests/unit/resources/: test_list_resources.py
tests/unit/shape_list/: test_buffered_drawing.py
tests/unit/sprite/: test_sprite.py  test_sprite_animated_walking.py  (+3 more)
util/: create_resources_listing.py  generate_example_thumbnails.py  generate_hit_box_cache.py  sphinx_static_file_temp_fix.py  sync_example_code_with_rst.py  update_quick_index.py
util/doc_helpers/: __init__.py  import_resolver.py  real_filesystem.py  vfs.py
webplayground/: README.md  example.tpl  index.tpl  local.tpl  local_run.tpl  server.py
webplayground/local_scripts/: README.md  example_test.py
(+21 files in other folders)
