[project]
name = "arcade"
description = "Arcade Game Development Library"
readme = "README.md"
authors = [{ name = "Paul Vincent Craven", email = "paul@cravenfamily.com" }]
license = { file = "license.rst" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pillow>=11.3.0",
    "pytiled-parser~=2.2.9",
    "pyglet==3.0.dev3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://api.arcade.academy"
Documentation = "https://api.arcade.academy/"
Examples = "https://api.arcade.academy/en/latest/examples/index.html"
Issues = "https://github.com/pythonarcade/arcade/issues"
Source = "https://github.com/pythonarcade/arcade"
Book = "https://learn.arcade.academy"

[dependency-groups]
extras = [
    "pymunk~=7.2.0"
]
# Doc building (requires Python >=3.12 due to Sphinx 9.x)
docs = [
    "sphinx==9.1.0; python_version >= '3.12'",
    "sphinx_rtd_theme==3.1.0; python_version >= '3.12'",
    "sphinx-rtd-dark-mode==1.3.0; python_version >= '3.12'",
    "sphinx-autobuild==2025.8.25; python_version >= '3.12'",
    "sphinx-copybutton==0.5.2; python_version >= '3.12'",
    "sphinx-sitemap==2.9.0; python_version >= '3.12'",
    "sphinx-togglebutton==0.4.5; python_version >= '3.12'",
    "pygments==2.20.0; python_version >= '3.12'",
    "docutils==0.22.4; python_version >= '3.12'",
]
# Used for dev work
dev = [
    # --- tools and build
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage",
    "coveralls",        # Do we really need this?
    "ruff",
    "mypy",
    "pyright==1.1.387",
    "click==8.1.7",     # Temp fix until we bump typer
    "typer==0.12.5",    # Needed for make.py
    "wheel",
    "bottle",            # Used for web testing playground
    {include-group = "extras"},
]

# Testing only
testing_libraries = ["pytest", "pytest-mock", "pytest-cov", "pyyaml==6.0.1"]

[project.scripts]
arcade = "arcade.cli:run_arcade_cli"

[project.entry-points.pyinstaller40]
hook-dirs = "arcade.__pyinstaller:get_hook_dirs"

[tool.setuptools.packages.find]
include = ["arcade", "arcade.*"]

[tool.setuptools.dynamic]
version = { attr = "arcade.version.VERSION" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 100
output-format = "full"
lint.exclude = [
    "venv",
    ".venv*",
    "tests",
    "build",
    "doc",
    "util",
    ".mypy_cache",
    ".pytest_cache",
    "temp",
    "bugs",
    "arcade/examples/*",
]
lint.ignore = [
    "E731", # E731 do not assign a lambda expression, use a def
    "E741", # E741 Ambiguous variable name
    # F811: redefinition
]

lint.select = [
    "E",
    "F",
    # Whitespace linting must be re-enabled manually for ruff
    # see https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
    "W",
    # "UP", wait for arcade.gl abstraction merge
]

[tool.ruff.format]
docstring-code-format = false
exclude = ["arcade/examples/*", "benchmarks/*", "doc/*"]

# This ignores __init__.py files and examples for import sorting
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I"]
"arcade/examples/*" = ["I"]
"arcade/gui/examples/*" = ["I"]
"util/*" = ["I"]
"benchmarks/*" = ["I"]

[tool.mypy]
disable_error_code = "annotation-unchecked"
exclude = ["arcade/gl/backends"]

[tool.pytest.ini_options]
norecursedirs = [
    "doc",
    "holding",
    "arcade/examples",
    "build",
    ".venv",
    "env",
    "dist",
    "tempt",
]
markers = [
    "backendgl: Run OpenGL (or OpenGL ES) backend specific tests",
    "backendwebgl: Run WebGL backend specific tests",
]

[tool.pyright]
include = ["arcade"]
exclude = [
    "venv",
    "arcade/__pyinstaller",
    "arcade/examples",
    "arcade/experimental",
    "arcade/gl/backends",
    "tests",
    "doc",
    "make.py",
]
typeCheckingMode = "basic"
# Use type info from pytiled_parser and pyglet, which do not ship `py.typed` file
useLibraryCodeForTypes = true
reportMissingTypeStubs = "none"
# Ignore diagnostics about values that might be `None`
reportOptionalCall = "none"
reportOptionalContextManager = "none"
reportOptionalIterable = "none"
reportOptionalMemberAccess = "none"
reportOptionalOperand = "none"
reportOptionalSubscript = "none"

[tool.coverage.run]
source = ["arcade"]
omit = [
    "./arcade/examples/*",
    "./arcade/gui/examples/*",
    "./arcade/experimental/*",
    "./env/*",
    "./tests/*",
    "./doc/*",
    "./Win*/*",
]

[[tool.mypy.overrides]]
module = "pyglet.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymunk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytiled_parser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PyInstaller.*"
ignore_missing_imports = true
